Implementing Statistics class, adjusting Player class, establishing character roller functionality. PTH 9/23